[package]
name = "what-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nixigaj/what"

[dependencies]
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.4.6", features = ["derive"] }
hyper = "0.14.27"
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
